@@ -1,3 +1,10 @@
+2005-08-19  David N. Welton  <davidw@dedasys.com>
+
+	* src/mod_rivet.c (Rivet_InitTclStuff): Use both the hostname and
+	the port in creating names for the slave.  This fixes a bug where
+	you have different virtual hosts running on the same server name
+	but different ports.
+
 2005-08-13  David N. Welton  <davidw@dedasys.com>
 
 	* tests/apachetest/apachetest.tcl: Make sure we get our own
